# internal/controller/restapi/v1/admin/dashboard.go
@@ -1,30 +1,26 @@
-package v1
+package admin
 
 import (
+	"net/http"
+
 	_ "github.com/evrone/go-clean-template/internal/controller/restapi/v1/response"
 	"github.com/gofiber/fiber/v2"
-	"net/http"
 )
 
-type adminDashboardResponse struct {
+type dashboardResponse struct {
 	Message string `json:"message" example:"Welcome to the admin dashboard!"`
 }
 
-// @Summary     Admin Dashboard
-// @Description Get admin dashboard message
+// @Summary     Admin dashboard
+// @Description Get the administrator dashboard message
 // @ID          admin-dashboard
 // @Tags        admin
 // @Produce     json
-// @Success     200 {object} adminDashboardResponse
+// @Success     200 {object} dashboardResponse
 // @Failure     401 {object} response.Error
 // @Failure     403 {object} response.Error
-// @Failure     500 {object} response.Error
 // @Security    BearerAuth
 // @Router      /admin/dashboard [get]
-func (r *V1) adminDashboard(ctx *fiber.Ctx) error {
-	resp := adminDashboardResponse{
-		Message: "Welcome to the admin dashboard!",
-	}
-
-	return ctx.Status(http.StatusOK).JSON(resp)
+func (ctrl *controller) dashboard(ctx *fiber.Ctx) error {
+	return ctx.Status(http.StatusOK).JSON(dashboardResponse{Message: "Welcome to the admin dashboard!"})
 }
