# internal/controller/restapi/v1/admin/request/login.go
@@ -1,0 +1,6 @@
+// Package request contains administrator API request DTOs.
+package request
+
+type Login struct {
+	IDToken string `json:"idToken" validate:"required" example:"firebase-id-token"`
+}
